syntax = "proto3";

package sys;

//user start---------------------
message LoginReq {
  string ping = 1;
}

message loginResp {
  string status = 1;
  string currentAuthority = 2;
}

message InfoReq {
  string ping = 1;
}

message InfoResp {
  string avatar = 1;
  string name = 2;
}

message UserAddReq {
  string email = 1;
  string mobile = 2;
  string name = 3;
  string nick_name = 4;
  string avatar = 5;
  string password = 6;
  string salt = 7;
}

message UserAddResp {
  string pong = 1;
}

message UserListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message UserListData{
  int64 id = 1;
  string name = 2;
  string nick_name = 3;
  string avatar = 4;
  string password = 5;
  string salt = 6;
  string email = 7;
  string mobile = 8;
  int64 status = 9;
  string create_by = 10;
  string create_time = 11;
  string last_update_by = 12;
  string last_update_time = 13;
  int64 del_flag = 14;
}

message UserListResp {
  int64 total = 1;
  repeated  UserListData list = 2;
}

message UserUpdateReq {
  int64 id = 1;
  string email = 2;
  string mobile = 3;
  string name = 4;
  string nick_name = 5;
  string avatar = 6;
  string password = 7;
  string salt = 8;
  string status = 9;
  string last_update_by = 10;
  string last_update_time = 11;
  int64 del_flag = 12;
}

message UserUpdateResp {
  string pong = 1;
}

message UserDeleteReq {
  int64 id = 1;
}

message UserDeleteResp {
  string pong = 1;
}

message UpdateUserRoleReq {
  string ping = 1;
}

message UpdateUserRoleResp {
  string pong = 1;
}
//user start---------------------

//role start---------------------
message RoleAddReq {
  string name = 1;
  string remark = 2;
}

message RoleAddResp {
  string pong = 1;
}

message RoleListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message RoleListData {
  int64 id = 1;
  string name = 2;
  string remark = 3;
  string create_by = 4;
  string create_time = 5;
  string last_update_by = 6;
  string last_update_time = 7;
  int64 del_flag = 8;
}

message RoleListResp {
  int64 total = 1;
  repeated  RoleListData list = 2;
}

message RoleUpdateReq {
  int64 id = 1;
  string name = 2;
  string remark = 3;
  string last_update_by = 4;
  string last_update_time = 5;
  int64 del_flag = 6;
}

message RoleUpdateResp {
  string pong = 1;
}

message RoleDeleteReq {
  int64 id = 1;
}

message RoleDeleteResp {
  string pong = 1;
}

message UpdateRoleRoleReq {
  string ping = 1;
}

message UpdateRoleRoleResp {
  string pong = 1;
}
//role end---------------------

//menu start---------------------
message MenuAddReq {
  string name = 1;
  int64 parent_id = 2;
  string url = 3;
  string perms = 4;
  string type = 5;
  string icon = 6;
  string order_num = 7;
}

message MenuAddResp {
  string pong = 1;
}

message MenuListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MenuListData {
  int64 id = 1;
  string name = 2;
  int64 parent_id = 3;
  string url = 4;
  string perms = 5;
  int64 type = 6;
  string icon = 7;
  int64 order_num = 8;
  string create_by = 10;
  string create_time = 11;
  string last_update_by = 12;
  string last_update_time = 13;
  int64 del_flag = 14;
}

message MenuListResp{
  int64 total = 1;
  repeated  MenuListData list = 2;
}
message MenuUpdateReq {
  int64 id = 1;
  string name = 2;
  string parent_id = 3;
  string url = 4;
  string perms = 5;
  string type = 6;
  string icon = 7;
  string order_num = 8;
  string last_update_by = 9;
  string last_update_time = 10;
  int64 del_flag = 11;
}

message MenuUpdateResp {
  string pong = 1;
}

message MenuDeleteReq {
  int64 id = 1;
}

message MenuDeleteResp {
  string pong = 1;
}

message UpdateMenuRoleReq {
  string ping = 1;
}

message UpdateMenuRoleResp {
  string pong = 1;
}
//menu end---------------------

//dict start---------------------
message DictAddReq {
  string value = 1;
  string label = 2;
  string type = 3;
  string description = 4;
  string sort = 5;
  string remarks = 6;
}

message DictAddResp {
  string pong = 1;
}

message DictListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message DictListData {
  int64 id = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  string description = 5;
  int64 sort = 6;
  string remarks = 7;
  string create_by = 10;
  string create_time = 11;
  string last_update_by = 12;
  string last_update_time = 13;
  int64 del_flag = 14;
}

message DictListResp{
  int64 total = 1;
  repeated  DictListData list = 2;
}

message DictUpdateReq {
  int64 id = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  string description = 5;
  string sort = 6;
  string remarks = 7;
  string last_update_by = 8;
  string last_update_time = 9;
  int64 del_flag = 10;
}

message DictUpdateResp {
  string pong = 1;
}

message DictDeleteReq {
  int64 id = 1;
}

message DictDeleteResp {
  string pong = 1;
}
//dict end---------------------

//dept start---------------------
message DeptAddReq {
  string name = 1;
  string parent_id = 2;
  string order_num = 3;
}

message DeptAddResp {
  string pong = 1;
}

message DeptListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message DeptListData {
  int64 id = 1;
  string name = 2;
  int64 parent_id = 3;
  int64 order_num = 4;
  string create_by = 5;
  string create_time = 6;
  string last_update_by = 7;
  string last_update_time = 8;
  int64 del_flag = 9;
}

message DeptListResp{
  int64 total = 1;
  repeated  DeptListData list = 2;
}
message DeptUpdateReq {
  int64 id = 1;
  string name = 2;
  string parent_id = 3;
  string order_num = 4;
  int64 del_flag = 5;
}

message DeptUpdateResp {
  string pong = 1;
}

message DeptDeleteReq {
  int64 id = 1;
}

message DeptDeleteResp {
  string pong = 1;
}
//dept end---------------------

//loginLog start---------------------
message LoginLogAddReq {
  string user_name = 1;
  string status = 2;
  string ip = 3;
}

message LoginLogAddResp {
  string pong = 1;
}

message LoginLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message LoginLogListData {
  int64 id = 1;
  string user_name = 2;
  string status = 3;
  string ip = 4;
  string create_by = 5;
  string create_time = 6;
  string last_update_by = 7;
  string last_update_time = 8;
}

message LoginLogListResp{
  int64 total = 1;
  repeated  LoginLogListData list = 2;
}
message LoginLogDeleteReq {
  int64 id = 1;
}

message LoginLogDeleteResp {
  string pong = 1;
}
//loginLog end---------------------

//sysLog start---------------------
message SysLogAddReq {
  string user_name = 1;
  string operation = 2;
  string method = 3;
  string params = 4;
  string time = 5;
  string ip = 6;
}

message SysLogAddResp {
  string pong = 1;
}

message SysLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message SysLogListData {
  int64 id = 1;
  string user_name = 2;
  string operation = 3;
  string method = 4;
  string params = 5;
  int64 time = 6;
  string ip = 7;
  string create_by = 8;
  string create_time = 9;
  string last_update_by = 10;
  string last_update_time = 11;
}

message SysLogListResp{
  int64 total = 1;
  repeated  SysLogListData list = 2;
}
message SysLogDeleteReq {
  int64 id = 1;
}

message SysLogDeleteResp {
  string pong = 1;
}
//sysLog end---------------------

//config start---------------------
message ConfigAddReq {
  string email = 1;
  string mobile = 2;
  string name = 3;
  string nick_name = 4;
}

message ConfigAddResp {
  string pong = 1;
}

message ConfigListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message ConfigListData {
  int64 id = 1;
  string Value = 2;
  string Label = 3;
  string Type = 4;
  string Description = 5;
  int64 Sort = 6;
  string Remarks = 7;
  int64 DelFlag = 8;
  string create_by = 9;
  string create_time = 10;
  string last_update_by = 11;
  string last_update_time = 12;
}

message ConfigListResp{
  int64 total = 1;
  repeated  ConfigListData list = 2;
}
message ConfigUpdateReq {
  string id = 1;
  string email = 2;
  string mobile = 3;
  string name = 4;
  string nick_name = 5;
}

message ConfigUpdateResp {
  string pong = 1;
}

message ConfigDeleteReq {
  string id = 1;
}

message ConfigDeleteResp {
  string pong = 1;
}

message UpdateConfigRoleReq {
  string ping = 1;
}

message UpdateConfigRoleResp {
  string pong = 1;
}
//config end---------------------

service Sys {

  rpc Login(LoginReq) returns(loginResp);
  rpc UserInfo(InfoReq) returns(InfoResp);
  rpc UserAdd(UserAddReq) returns(UserAddResp);
  rpc UserList(UserListReq) returns(UserListResp);
  rpc UserUpdate(UserUpdateReq) returns(UserUpdateResp);
  rpc UserDelete(UserDeleteReq) returns(UserDeleteResp);
  rpc UpdateUserRole(UpdateUserRoleReq) returns(UpdateUserRoleResp);

  rpc RoleAdd(RoleAddReq) returns(RoleAddResp);
  rpc RoleList(RoleListReq) returns(RoleListResp);
  rpc RoleUpdate(RoleUpdateReq) returns(RoleUpdateResp);
  rpc RoleDelete(RoleDeleteReq) returns(RoleDeleteResp);
  rpc UpdateRoleRole(UpdateRoleRoleReq) returns(UpdateRoleRoleResp);

  rpc MenuAdd(MenuAddReq) returns(MenuAddResp);
  rpc MenuList(MenuListReq) returns(MenuListResp);
  rpc MenuUpdate(MenuUpdateReq) returns(MenuUpdateResp);
  rpc MenuDelete(MenuDeleteReq) returns(MenuDeleteResp);
  rpc UpdateMenuRole(UpdateMenuRoleReq) returns(UpdateMenuRoleResp);

  rpc DictAdd(DictAddReq) returns(DictAddResp);
  rpc DictList(DictListReq) returns(DictListResp);
  rpc DictUpdate(DictUpdateReq) returns(DictUpdateResp);
  rpc DictDelete(DictDeleteReq) returns(DictDeleteResp);

  rpc DeptAdd(DeptAddReq) returns(DeptAddResp);
  rpc DeptList(DeptListReq) returns(DeptListResp);
  rpc DeptUpdate(DeptUpdateReq) returns(DeptUpdateResp);
  rpc DeptDelete(DeptDeleteReq) returns(DeptDeleteResp);

  rpc LoginLogAdd(LoginLogAddReq) returns(LoginLogAddResp);
  rpc LoginLogList(LoginLogListReq) returns(LoginLogListResp);
  rpc LoginLogDelete(LoginLogDeleteReq) returns(LoginLogDeleteResp);

  rpc SysLogAdd(SysLogAddReq) returns(SysLogAddResp);
  rpc SysLogList(SysLogListReq) returns(SysLogListResp);
  rpc SysLogDelete(SysLogDeleteReq) returns(SysLogDeleteResp);

  rpc ConfigAdd(ConfigAddReq) returns(ConfigAddResp);
  rpc ConfigList(ConfigListReq) returns(ConfigListResp);
  rpc ConfigUpdate(ConfigUpdateReq) returns(ConfigUpdateResp);
  rpc ConfigDelete(ConfigDeleteReq) returns(ConfigDeleteResp);
  rpc UpdateConfigRole(UpdateConfigRoleReq) returns(UpdateConfigRoleResp);

}



